tests/miniJava/neg/006840_mutation.MiniJava
class this java { public static void Main ( String [ ] java ) { { } } }
